--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,9 +1,13 @@
 @layer components {
-  .default-form-element {
-    @apply h-8 rounded text-sm;
+  .form-element-style {
+    @apply w-full rounded px-2 text-gray-600 outline-none;
   }
 
-  .form-element-with-height-fitted {
-    @apply h-fit rounded text-xs;
+  .form-element-with-default-height {
+    @apply h-8 text-sm;
+  }
+
+  .form-element-with-fitted-height {
+    @apply h-fit text-xs;
   }
 }
