--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,5 @@
 @tailwind utilities;
 
 html {
-  @apply flex h-full items-center justify-center bg-gray-50 font-['Poppins'];
+  @apply font-['Poppins'];
 }
