--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 @import './styles/button.css';
 @import './styles/form.css';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer base {
+  :root {
+    --color-primary: 56 111 164;
+    --color-secondary: 89 165 216;
+  }
 
-html {
-  @apply font-['Poppins'];
+  html {
+    font-family: poppins, system-ui, sans-serif;
+  }
 }
