--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,27 @@
     --color-text-primary: 255 255 255;
   }
 }
+
+.positionLeft {
+  @apply fixed inset-y-0 left-0 flex h-full w-96 flex-col
+          items-center justify-start overflow-hidden bg-white
+          transition duration-300 ease-in-out;
+}
+
+.positionRight {
+  @apply fixed inset-y-0 right-0 flex h-full w-96 flex-col
+          items-center justify-start overflow-hidden bg-white
+          transition duration-300 ease-in-out;
+}
+
+.positionTop {
+  @apply fixed inset-x-0 top-0 flex h-96 w-full flex-col
+          items-center justify-start overflow-hidden bg-white
+          transition duration-300 ease-in-out;
+}
+
+.positionBottom {
+  @apply fixed inset-x-0 bottom-0 flex h-96 w-full flex-col
+          items-center justify-start overflow-hidden bg-white
+          transition duration-300 ease-in-out;
+}
